[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylibrelinkup"
dynamic = ["version"]
description = "A client for the Abbott LibreLinkUp API"
readme = "README.md"
authors = [
  { name="Rob Berwick", email="rob.berwick@gmail.com" },
]
license = { file="LICENSE" }
keywords = [
    "librelink",
    "librelinkup",
    "abbott",
    "diabetes",
    "glucose",
    "api",
    "client",
    "health",
    "medical",
    "blood-sugar",
    "continuous-glucose-monitoring",
    "cgm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>= 2.5.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autobuild", "sphinx-autodoc-typehints", "autodoc_pydantic", "enum-tools[sphinx]", "setuptools_scm"]
dev = ["black", "isort", "pre-commit"]
test = ["pytest", "pytest-cov", "pytest-mock", "polyfactory", "responses"]

[project.urls]
Homepage = "https://github.com/robberwick/pylibrelinkup"
Issues = "https://github.com/robberwick/pylibrelinkup/issues"
Documentation = "https://pylibrelinkup.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.black]
target_version = ['py311']

[tool.isort]
profile = "black"
