[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylibrelinkup"
dynamic = ["version"]
description = "A client for the Abbott LibreLinkUp API"
readme = "README.md"
authors = [
    { name = "Rob Berwick", email = "rob.berwick@gmail.com" },
]
license = { file = "LICENSE" }
keywords = [
    "librelink",
    "librelinkup",
    "abbott",
    "diabetes",
    "glucose",
    "api",
    "client",
    "health",
    "medical",
    "blood-sugar",
    "continuous-glucose-monitoring",
    "cgm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>= 2.5.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0.2,<8.1",
    "sphinx-rtd-theme>=3.0.0rc4,<3.1",
    "sphinx-autobuild>=2024.10.3,<2025.0",
    "sphinx-autodoc-typehints>=2.4.4,<2.5",
    "autodoc_pydantic>=2.2.0,<2.3",
    "enum-tools[sphinx]>=0.12.0,<0.13",
    "setuptools_scm>=8.1.0,<8.2"
]
dev = ["black", "isort", "pre-commit", "mypy", "flake8", "types-requests"]
test = ["pytest", "pytest-cov", "pytest-mock", "polyfactory", "responses"]

[project.urls]
Homepage = "https://github.com/robberwick/pylibrelinkup"
Issues = "https://github.com/robberwick/pylibrelinkup/issues"
Documentation = "https://pylibrelinkup.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.black]
target_version = ['py311']

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "setuptools_scm"
ignore_missing_imports = true
